--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -188,8 +188,8 @@ div.dataTables_wrapper div.dataTables_filter input {
   font-size: 12px;
   font-weight: 500;
   color:white;
-  background-color: #696cff;
-  border-color: #696cff;
+  background-color: #1C315E;
+  border-color: #1C315E;
   box-shadow: 0 0.125rem 0.25rem 0 rgba(105, 108, 255, 0.4);
   padding: 4px 15px;
   border: none;
@@ -231,7 +231,7 @@ div.dataTables_wrapper div.dataTables_filter input {
 
  
 .datatable-responsive2::-webkit-scrollbar-thumb {
-  background-color: #696cff;
+  background-color: #1C315E;
 }
 .total-text h2{
    font-size: 18px;
@@ -244,7 +244,7 @@ div.dataTables_wrapper div.dataTables_filter input {
   border: none;
 }
 .info-btn i{
-  color: #696cff;
+  color: #1C315E;
 }
 
 
@@ -310,7 +310,7 @@ div.dataTables_wrapper div.dataTables_filter input {
   gap: 163px;
   align-self: stretch;
   border-radius: 1px;
-  background:#696cff;
+  background:#1C315E;
 }
 
 .reciept-note {
@@ -372,7 +372,7 @@ div.dataTables_wrapper div.dataTables_filter input {
 
 /* Create an active/current tablink class */
 .tab button.active {
-  background-color: #696cff;
+  background-color: #1C315E;
   color: white;
 }
 
@@ -386,7 +386,7 @@ div.dataTables_wrapper div.dataTables_filter input {
   border: none !important;
 }
 .dt-head{
-  background-color: #696cff;
+  background-color: #1C315E;
 
 }
 .dt-head th{
@@ -442,10 +442,10 @@ table.dataTable>tbody>tr{
   margin:20px auto !important;
 }
 .modal-header-style{
-  background-color: #696cff;
+  background-color: #1C315E;
 }
 .comment-div{
-  background-color: #696cff;
+  background-color: #1C315E;
   padding: 7px 15px;
   color: white;
   font-size: 16px;
@@ -463,7 +463,7 @@ table.dataTable>tbody>tr{
 }
 .add-more-uni-row{
   background-color: #ece8e8;
-  border: 1px solid #696cff;
+  border: 1px solid #1C315E;
   border-radius: 4px;
   padding: 15px;
   margin-bottom: 20px;
@@ -516,7 +516,7 @@ div.dataTables_wrapper div.dataTables_filter label input{
 
  
 .table-responsive::-webkit-scrollbar-thumb {
-  background-color: #696cff;
+  background-color: #1C315E;
 }
 @media only screen and (max-width:1024px){
   .tab{
