--- a/scss/theme-default.scss
+++ b/scss/theme-default.scss
@@ -2,7 +2,7 @@
 @import './_theme/common';
 @import './_theme/_theme';
 
-$primary-color: #696cff;
+$primary-color: #1C315E;
 
 @include template-common-theme($primary-color);
 
