--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -672,3 +672,24 @@ td{
     min-width: 100%;
   }
 }
+
+
+
+.delete-leave{
+  position: absolute;
+  top: 0;
+  right: 12px;
+  background-color: transparent;
+  border: none;
+  color: red;
+}
+
+
+.delete-time{
+  position: absolute;
+  top: 4px;
+  right: 12px;
+  background-color: transparent;
+  border: none;
+  color: red;
+}
