--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -748,6 +748,21 @@ td{
   border-radius: 4px !important;
   margin-left: 7px !important;
 }
+.expens-total {
+  border: 1px solid #d9dee3;
+  border-radius: 6px;
+  padding: 15px;
+  border-top: 5px solid #222367;
+}
+.expens-total h1{
+   font-size: 16px;
+   font-weight: 600;
+   color: #222367;
+}
+.expens-total h2{
+  font-size: 16px;
+  font-weight: 500;
+}
 @media only screen and (max-width:560px){
   .modal-fullscreen{
     width: 100vw;
